--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 
     <link rel="icon" type="image/x-icon" href="img/pulse.png">
-    <title>Red Creciente 2</title>
+    <title>Red Latam FullStack</title>
   </head>
   <body>
 
@@ -65,8 +65,8 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/fekfcS0UhEE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </div>
-    <script src="https://javiercaliz.github.io/CalendarCode/commonScript.js" type="text/javascript"></script>
-		<script src="https://javiercaliz.github.io/CalendarCode/red2Script.js" type="text/javascript"></script> 
+    <script src="https://javiercaliz.github.io/CalendarCode/commonScriptLatam.js" type="text/javascript"></script>
+		<script src="https://javiercaliz.github.io/CalendarCode/red8LatamFullstack.js" type="text/javascript"></script> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
